@startuml er
' Modelo ER (lógico, IE/Crow's Foot) — Sistema de Moeda Estudantil
' Lab03S03 final. Schema implementado em V1, V2, V3 (Lab03S02) +
' V4, V5 (Lab03S03). Reflete a herança JPA JOINED.

skinparam shadowing false
skinparam linetype ortho
hide circle
title Modelo ER — Sistema de Moeda Estudantil

entity "usuario" as usuario #LightYellow {
  *id : bigint <<PK>>
  --
  *nome : varchar(120)
  *email : varchar(120) <<unique>>
  *credencial_id : bigint <<FK>>
  *tipo : varchar(20) <<discriminator>>
  *ativo : boolean DEFAULT TRUE
}

entity "aluno" as aluno #LightYellow {
  *id : bigint <<PK, FK→usuario.id>>
  --
  *cpf : varchar(11) <<unique>>
  *rg : varchar(20)
  *endereco : varchar(255)
  *curso : varchar(120)
  *instituicao_id : bigint <<FK>>
  *saldo : int
}

entity "professor" as professor #LightYellow {
  *id : bigint <<PK, FK→usuario.id>>
  --
  *cpf : varchar(11) <<unique>>
  *departamento : varchar(120)
  *instituicao_id : bigint <<FK>>
  *saldo : int
}

entity "empresa_parceira" as empresa #LightYellow {
  *id : bigint <<PK, FK→usuario.id>>
  --
  *cnpj : varchar(14) <<unique>>
}

entity "credencial" as credencial #LightYellow {
  *id : bigint <<PK>>
  --
  *login : varchar(80) <<unique>>
  *senha_hash : varchar(255)
  *tipo_ator : varchar(20)
}

entity "instituicao" as instituicao #LightYellow {
  *id : bigint <<PK>>
  --
  *nome : varchar(120) <<unique>>
}

entity "vantagem" as vantagem #LightYellow {
  *id : bigint <<PK>>
  --
  *empresa_id : bigint <<FK>>
  *descricao : varchar(500)
  *custo : int
  foto : BLOB
  foto_content_type : varchar(50)
  *ativa : boolean DEFAULT TRUE
  *criada_em : timestamp
}

entity "transferencia_moeda" as transferencia #LightYellow {
  *id : bigint <<PK>>
  --
  *professor_id : bigint <<FK>>
  *aluno_id : bigint <<FK>>
  *valor : int
  *motivo : varchar(500)
  *realizada_em : timestamp
}

entity "resgate" as resgate #LightYellow {
  *id : bigint <<PK>>
  --
  *aluno_id : bigint <<FK>>
  *vantagem_id : bigint <<FK>>
  *custo : int
  *codigo : varchar(36) <<unique>>
  *realizado_em : timestamp
}

entity "notificacao" as notificacao #LightYellow {
  *id : bigint <<PK>>
  --
  *destinatario : varchar(120)
  *assunto : varchar(255)
  *corpo : varchar(2000)
  *status : varchar(20)
  codigo_referencia : varchar(36)
  *criada_em : timestamp
}

entity "token_recuperacao" as token #LightYellow {
  *id : bigint <<PK>>
  --
  *credencial_id : bigint <<FK>>
  *token : varchar(64) <<unique>>
  *expira_em : timestamp
  *usado : boolean DEFAULT FALSE
  *criado_em : timestamp
}

' Herança JOINED: PK das filhas é FK para usuario
usuario ||--o| aluno              : "is-a"
usuario ||--o| professor          : "is-a"
usuario ||--o| empresa            : "is-a"

' Credencial 1:1 com Usuario (admin é credencial sem usuario)
credencial ||--o| usuario         : "autentica"

' Instituicao agrega alunos e professores
instituicao ||--o{ aluno          : "tem"
instituicao ||--o{ professor      : "tem"

' Empresa oferece vantagens
empresa ||--o{ vantagem           : "oferece"

' Transferência: professor → aluno
professor ||--o{ transferencia    : "origem"
aluno     ||--o{ transferencia    : "destinatário"

' Resgate: aluno → vantagem
aluno    ||--o{ resgate           : "por"
vantagem ||--o{ resgate           : "de"

' Token de recuperação pertence a uma credencial
credencial ||--o{ token           : "gera"

legend right
  |= Cor      |= Significado                                          |
  | Amarelo   | Implementado (V1–V5 Flyway, todas as etapas)          |
endlegend

note bottom
  **Estratégia ORM**: Micronaut Data JPA + Hibernate.
  **Herança**: JPA JOINED — tabela `usuario` (pai) + tabelas
  filhas (aluno, professor, empresa_parceira) com PK = FK para
  `usuario.id`.
  **Migrations**: Flyway versionado em
  `src/main/resources/db/migration/`.

  V1 schema base + V2 instituições + V3 demo (Lab03S02)
  V4 lab03s03_schema + V5 seed_lab03s03_demo (Lab03S03)

  Admin vive apenas em `credencial` (`tipo_ator='ADMIN'`); não
  tem linha em `usuario` (não há subclasse para ele).

  Notificacao é o **outbox** da aplicação: cada "e-mail" enviado
  pelo sistema vira uma linha, sem dependência de SMTP.

  CHECKs `saldo >= 0`, `custo > 0`, `valor > 0` e a unicidade
  de `resgate.codigo` ficam expressos no schema.
end note

@enduml
